--- a/backend/a-session.csproj
+++ b/backend/a-session.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <RootNamespace>a_session</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
