Implement basic user authentication with JWT

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -8,5 +8,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "your-super-secret-key-here-change-this-in-production",
+    "Issuer": "ASession",
+    "Audience": "ASessionUsers"
+  }
 }
