--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=ASessionDb;Username=postgres;Password=postgres;Encoding=UTF8"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=ASessionDb;Username=postgres"
   },
   "Logging": {
     "LogLevel": {
