Update configuration files and documentation

--- a/backend/appsettings.Development.json
+++ b/backend/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=ASessionDb;Username=postgres"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=ASessionDb;Username=postgres;Password=87arv2mu"
   },
   "Logging": {
     "LogLevel": {
