Add automatic supervisor admin account creation on database initialization

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -13,5 +13,10 @@
     "Key": "your-super-secret-key-here-change-this-in-production",
     "Issuer": "ASession",
     "Audience": "ASessionUsers"
+  },
+  "AdminUser": {
+    "Name": "Supervisor",
+    "Email": "supervisor@asession.com",
+    "Password": "Admin123!"
   }
 }
