chore: update database password and move secrets to appsettings.Secrets.json

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -15,3 +15,8 @@ frontend/pubspec.lock
 # ASP.NET
 backend/obj/
 backend/bin/
+# Secrets (Development only)
+appsettings.Development.json
+appsettings.Secrets.json
+appsettings.*.json
+.user-secrets/
