--- a/backend/appsettings.Development.json
+++ b/backend/appsettings.Development.json
@@ -1,6 +1,10 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=ASessionDb;Username=postgres;Password=87arv2mu"
+  "Email": {
+    "From": "neighbour.architect.studio@gmail.com",
+    "Smtp": {
+      "Host": "smtp.gmail.com",
+      "Port": "587"
+    }
   },
   "Logging": {
     "LogLevel": {
