--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=ASessionDb;Username=postgres;Password=postgres"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=ASessionDb;Username=postgres;Password=yourpassword"
   },
   "Logging": {
     "LogLevel": {
@@ -13,6 +13,23 @@
     "Key": "your-super-secret-key-here-change-this-in-production",
     "Issuer": "ASession",
     "Audience": "ASessionUsers"
+  },
+  "Email": {
+    "From": "noreply@asession.com",
+    "Smtp": {
+      "Host": "smtp.example.com",
+      "Port": "587",
+      "Username": "smtp-user",
+      "Password": "smtp-password"
+    }
+  },
+  "OAuth": {
+    "Google": {
+      "ClientId": "your-google-client-id.apps.googleusercontent.com"
+    },
+    "Apple": {
+      "ClientId": "com.example.asession"
+    }
   },
   "AdminUser": {
     "Name": "Supervisor",
